<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_save_note"
        android:orderInCategory="100"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="101"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_email_note"
        android:icon="@drawable/ic_action_email"
        android:orderInCategory="102"
        android:title="@string/email"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_nfc_note"
        android:icon="@drawable/ic_action_nfc"
        android:orderInCategory="103"
        android:title="@string/nfc"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_alarm_note"
        android:icon="@drawable/ic_action_alarm"
        android:orderInCategory="104"
        android:title="@string/alarm_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_mode"
        android:checkable="true"
        android:orderInCategory="99"
        android:title="@string/view_mode"
        app:showAsAction="never" />


</menu>